2024-03-09  Robby Stephenson  <robby@periapsis.org>

	* Enabled building with Qt6/KF6.
	* Fixed DVDFr searches with title accents.

2024-02-11  Robby Stephenson  <robby@periapsis.org>

	* Removed data source for Allocine.

2024-01-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug for entry selection after changing group field (Bug 480297).

2024-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed display bug with entry status (Bug 479843).

2024-01-13  Robby Stephenson  <robby@periapsis.org>

	* Updated Open Library source to search for comics (Bug 479506).
	* Fixed bug with filter dialog buttons (Bug 479771).
	* Updated iTunes, Discogs, and MusicBrainz to separate multi-disc tracks (Bug 479503).

2024-01-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening help from the config dialog (Bug 479591).

2024-01-02  Robby Stephenson  <robby@periapsis.org>

	* Removed AnimeNFO.com data source, website is defunct.

2024-01-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.3.
	* Updated author search for Open Library.
	* Improved entry matching heuristics.

2023-12-25  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDB fetcher to make locale configurable.

2023-12-19  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino-Teatr data source.

2023-12-08  Robby Stephenson  <robby@periapsis.org>

	* Removed backchecking of KWallet in CrossRef source.

2023-11-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing empty space on left for custom collections with no image.

2023-10-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.2.

2023-10-17  Robby Stephenson  <robby@periapsis.org>

	* Updated entry templates to show loan info (Bug 411903).

2023-10-11  Robby Stephenson  <robby@periapsis.org>

	* Added support for outputting a log file (Bug 426624).

2023-09-28  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Discogs collections (Bug 446262).
